# doc-server

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODING_STANDARDS.md  Dockerfile  MANIFEST.in  Makefile  PHASE_62_COMPLETION.md  README.md  RELEASING.md  TESTING.md  WORKFLOW.md  config.yaml  config.yaml.example  doc-server-plan.md  doc-server-tasks.md  ingest_algorithms.py  initial-prompt.md  mcp_config.json  pyproject.toml  requirements.txt  test_connection.py  verify_phase_62.py  verify_vector_store.py
.github/: changelog-config.json
.github/workflows/: release.yml  test.yml
.opencode/: opencode.json
.opencode/plans/: makefile-standardization.md
.opencode/skills/: registry.md
.opencode/skills/dev-phase-orchestrator/: README.md  SKILL.md  config.md
.opencode/skills/dev-phase-orchestrator/assets/: templates.py
.opencode/skills/dev-phase-orchestrator/phase-agents/: alignment.md  commit.md  implementation.md  verification.md
.opencode/skills/dev-phase-orchestrator/references/: specs.md  workflows.md
.opencode/skills/dev-phase-orchestrator/scripts/: dev_utils.py
.opencode/skills/dev-phase-orchestrator/src/: delegation.ts  error-handling.ts  index.ts  orchestrator.ts  types.ts
.opencode/skills/dev-phase-orchestrator/src/agents/: alignment.ts  commit.ts  implementation.ts  verification.ts
.opencode/skills/isolated-phase-orchestrator/: IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  demo.py  test_orchestrator.py
.opencode/skills/isolated-phase-orchestrator/.demo-workflow/: sessions.json
.opencode/skills/isolated-phase-orchestrator/.phase-workflow/: state_alignment.json  state_commit.json  state_implementation.json  state_verification.json
.opencode/skills/isolated-phase-orchestrator/.test-phase-workflow/: sessions.json
.opencode/skills/isolated-phase-orchestrator/phase-skills/alignment/: PHASE_AGENT.md  alignment.py
.opencode/skills/isolated-phase-orchestrator/phase-skills/commit/: PHASE_AGENT.md  commit.py
.opencode/skills/isolated-phase-orchestrator/phase-skills/implementation/: PHASE_AGENT.md  implementation.py
.opencode/skills/isolated-phase-orchestrator/phase-skills/verification/: PHASE_AGENT.md  verification.py
.opencode/skills/isolated-phase-orchestrator/state-management/: schemas.json  state_manager.py
.opencode/skills/isolated-phase-orchestrator/workflows/: coordination.py
doc_server/: __init__.py  api_client.py  api_server.py  cli.py  config.py  logging_config.py  mcp_server.py  utils.py
doc_server/ingestion/: __init__.py  document_processor.py  file_filter.py  git_cloner.py  zip_extractor.py
doc_server/search/: __init__.py  embedding_service.py  hybrid_search.py  vector_store.py
docs/: architecture.md  cli.md  configuration.md  deployment.md  examples.md  installation.md  mcp-tools.md  quickstart.md  troubleshooting.md
scripts/: README.md  ingest_algorithms.py  verify_components.py  verify_phase_62.py  verify_vector_store.py
specs/: doc-server-acceptence.md  doc-server-plan.md  doc-server-product-spec.md  doc-server-tasks.md  remote-backend-design.md  remote-backend-implementation-plan.md  remote-backend-requirements.md
tests/: conftest.py  test_api_client.py  test_api_server.py  test_cli.py  test_config.py  test_document_processor.py  test_document_processor_extra.py  test_embedding_service.py  test_embedding_service_init.py  test_file_filter.py  test_git_cloner.py  test_hybrid_search.py  test_integration.py  test_logging_config.py  test_mcp_server.py  test_mcp_server_config.py  test_mcp_server_remote.py  test_performance_regression.py  test_vector_store.py  test_zip_extractor.py
