[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-server"
version = "0.1.0"
description = "AI-powered documentation management system with intelligent search capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Doc Server Team", email = "team@docserver.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
 requires-python = ">=3.10"
 dependencies = [
     "fastmcp>=0.1.0",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "httpx>=0.25.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
     "scikit-learn>=1.3.0",
     "sentence-transformers>=2.2.0",
     "openai>=1.0.0",
     "chromadb>=0.4.0",
     "faiss-cpu>=1.7.0",
     "GitPython>=3.1.0",
     "pathspec>=0.11.0",
     "python-multipart>=0.0.6",
     "python-docx>=1.1.0",
     "PyPDF2>=3.0.0",
     "sqlalchemy>=2.0.0",
     "alembic>=1.12.0",
     "pydantic>=2.4.0",
     "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
     "structlog>=23.2.0",
     "torch",
     "pytest>=9.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
doc-server = "doc_server.mcp_server:main"

[project.urls]
Homepage = "https://github.com/docserver/doc-server"
Documentation = "https://docserver.dev/docs"
Repository = "https://github.com/docserver/doc-server.git"
Issues = "https://github.com/docserver/doc-server/issues"

[tool.hatch.version]
path = "doc_server/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/doc_server",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["doc_server"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["doc_server"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "faiss.*",
    "sentence_transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

